--- a/public/scrollbar.css
+++ b/public/scrollbar.css
@@ -11,6 +11,7 @@
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
 }
 
 /* Handle on hover */
