--- a/src/index.css
+++ b/src/index.css
@@ -81,13 +81,21 @@
     --ring: 240 4.9% 83.9%;
   }
 
-  html {
-    font-size: 100%;
-  }
-
   /* 다크 모드 배경 색 변경 시 */
   * {
     transition: background-color 200ms ease;
+  }
+
+  @font-face {
+    font-family: "Pretendard Variable";
+    font-weight: 45 920;
+    font-style: normal;
+    font-display: swap;
+    src: url("./woff2/PretendardVariable.woff2") format("woff2-variations");
+  }
+
+  html {
+    font-family: "Pretendard Variable";
   }
 }
 
