Feat: hierarchy page 생성

--- a/index.css
+++ b/index.css
@@ -74,3 +74,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .text-view-title {
+    @apply font-bold text-content-5 md:text-lg;
+  }
+}
